# openstackclient

./: .gitignore  .gitreview  .pre-commit-config.yaml  .zuul.yaml  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
playbooks/: pre.yaml
playbooks/openstackclient-check-plugins/: run.yaml
tests/: check_osc_commands.py  install-siblings.sh  test_openstackclient.py
